[gd_scene load_steps=6 format=3 uid="uid://c6q64lqanqq1f"]

[ext_resource type="Theme" uid="uid://bh6jkjg5lp1j6" path="res://nodes/gui/nums.tres" id="1_24p0b"]
[ext_resource type="PackedScene" uid="uid://bnvbgr4erik6x" path="res://nodes/gui/closepanel.tscn" id="2_b8l6h"]
[ext_resource type="Script" path="res://nodes/gui/inviteme.gd" id="2_i0cbe"]
[ext_resource type="Texture2D" uid="uid://b0ew3s7wcjemy" path="res://assets/FREEUIASSETPACK_BY@CAMTATZ/Symbols & Text/SYMB_CHECK.png" id="3_30cxb"]
[ext_resource type="Script" path="res://nodes/gui/IconButton.gd" id="4_6ogdv"]

[node name="Invite" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
offset_bottom = 152.0
theme = ExtResource("1_24p0b")
script = ExtResource("2_i0cbe")

[node name="Closepanel" parent="." instance=ExtResource("2_b8l6h")]
layout_mode = 0
offset_right = 272.0
offset_bottom = 160.0

[node name="Label" type="Label" parent="Closepanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 64.0
offset_right = 56.0
offset_bottom = 88.0
text = "ID"

[node name="Label3" type="Label" parent="Closepanel"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 256.0
offset_bottom = 88.0
text = "user id"
horizontal_alignment = 1

[node name="OK" type="TextureButton" parent="Closepanel"]
layout_mode = 0
offset_left = 112.0
offset_top = 104.0
offset_right = 152.0
offset_bottom = 144.0
texture_normal = ExtResource("3_30cxb")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("4_6ogdv")

[node name="No" type="TextureButton" parent="Closepanel"]
layout_mode = 0
offset_left = 112.0
offset_top = 104.0
offset_right = 152.0
offset_bottom = 144.0
texture_normal = ExtResource("3_30cxb")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("4_6ogdv")

[node name="Label2" type="Label" parent="Closepanel"]
layout_mode = 0
offset_left = 40.0
offset_top = 16.0
offset_right = 240.0
offset_bottom = 40.0
text = "INVITE you"

[connection signal="panel_close" from="Closepanel" to="." method="_on_closepanel_panel_close"]
[connection signal="pressed" from="Closepanel/OK" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="Closepanel/No" to="." method="_on_ok_pressed"]
